--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h3>Score: <span id="result"></span></h3>
+    <div class="container">
+      <div class="header">
+        <h1 class="is-size-2 my-3 has-text-weight-light">Memory Game</h1>
+      </div>
 
-    <div class="grid"></div>
+  
+      <div class="columns">  
+ 
+          <div class="column">
+              <div class="grid"></div>
+          </div>
+  
+          <div class="column">
+            <div class="block">
+              <h3 class="has-text-weight-light">Score: <span id="result"></span></h3>
+            </div>
+   
+            <div class="block">
+              <button class="mt-6 button" id="reset">Reset</button>
+            </div>
+            <div class="block">
+              <p id="commentary"></p>
+            </div>
+          </div>
+
+  
+      </div>
+
+
+
+
+
+      
+  
+    </div>
+
+  
+
+
   </body>
 </html>
