--- a/index.html
+++ b/index.html
@@ -16,41 +16,28 @@
     <div class="container">
       <div class="header">
         <h1 class="is-size-2 my-3 has-text-weight-light">Memory Game</h1>
+        <p class="has-text-weight-light">Find all the matches - there are frogs, birds and whales to find!</p>
       </div>
 
-  
-      <div class="columns">  
- 
-          <div class="column">
-              <div class="grid"></div>
+      <div class="columns">
+        <div class="column">
+          <div class="grid"></div>
+          <div class="block">
+            <h3 class="mt-5 has-text-weight-light">
+              <span id="result"></span>
+            </h3>
           </div>
-  
-          <div class="column">
-            <div class="block">
-              <h3 class="has-text-weight-light">Score: <span id="result"></span></h3>
-            </div>
-   
-            <div class="block">
-              <button class="mt-6 button" id="reset">Reset</button>
-            </div>
-            <div class="block">
-              <p id="commentary"></p>
-            </div>
-          </div>
+        </div>
 
-  
+        <div class="column">
+          <div class="block">
+            <button class="button" id="reset">Reset</button>
+          </div>
+          <div class="block">
+            <p id="commentary"></p>
+          </div>
+        </div>
       </div>
-
-
-
-
-
-      
-  
     </div>
-
-  
-
-
   </body>
 </html>
